# dj_drf_jwt

./: pyproject.toml
dj_drf_jwt/: apps.py  settings.py
